[gd_scene load_steps=2 format=2]

[ext_resource path="res://Fases/Fase base/FaseBaseScr.gd" type="Script" id=1]

[node name="Fase base" type="Node2D"]
script = ExtResource( 1 )
Resposta = "35"
VaiPra = "res://GoodEndingScreen.tscn"

[node name="Label" type="Label" parent="."]
margin_left = 398.761
margin_top = 228.144
margin_right = 528.761
margin_bottom = 287.144
text = "15 + 20"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 825.724
margin_top = 489.254
margin_right = 940.724
margin_bottom = 577.254
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 478.293
margin_top = 486.036
margin_right = 782.293
margin_bottom = 575.036
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
modulate = Color( 100, 100, 100, 0 )
margin_left = 585.751
margin_top = 460.346
margin_right = 672.751
margin_bottom = 474.346
text = "Caralho, s√©rio"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
